--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Lobster|Raleway&display=swap"
+      href="https://fonts.googleapis.com/css?family=Russo+One|Lobster|Raleway&display=swap"
       rel="stylesheet"
     />
     <link
