--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- upgrades all http requests to use https -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
